<resources>
    <string name="app_name">Weather Application</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">Current Weather in Cochabamba</string>
    <string name="weather">Weather</string>
    <string name="description">Description</string>
    <string name="temperature">Temperature</string>
    <string name="humity">Humity</string>
    <string name="pression">Pression</string>
    <string name="viewWeather">View Weather</string>
    <string name="title_section1">Weather</string>
</resources>
