<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity$PlaceholderFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:layout_weight="1" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/weatherTextField"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:background="#000000"
        android:textColor="#85A366"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="8">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/weather"
                android:id="@+id/textView2"
                android:layout_marginLeft="10dp"
                android:layout_weight="1" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/editTextMainWeather"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:enabled="false"
                android:editable="false"
                android:background="#000000"
                android:textColor="#85A366"
                 />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/description"
                android:id="@+id/textView3"
                android:layout_marginLeft="10dp"
                android:layout_weight="1" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/editTextDescriptionWeather"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:enabled="false"
                android:editable="false"
                android:background="#000000"
                android:textColor="#85A366"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/temperature"
                android:id="@+id/textView4"
                android:layout_marginLeft="10dp"
                android:layout_weight="1" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/editTextTemperature"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:enabled="false"
                android:editable="false"
                android:background="#000000"
                android:textColor="#85A366"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/humity"
                android:id="@+id/textView5"
                android:layout_marginLeft="10dp"
                android:layout_weight="1" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/editTextHumidity"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:enabled="false"
                android:editable="false"
                android:background="#000000"
                android:textColor="#85A366"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/pression"
                android:id="@+id/textView6"
                android:layout_marginLeft="10dp"
                android:layout_weight="1" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/editTextPressure"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:enabled="false"
                android:editable="false"
                android:background="#000000"
                android:textColor="#85A366"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:text="@string/viewWeather"
        android:id="@+id/buttonCurrent"
        android:layout_gravity="center_horizontal"
        android:layout_margin="2dp"
        android:layout_weight="2"
        android:background="#000000"
        android:textColor="#85A366"/>

</LinearLayout>